<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/merah"
    tools:context=".karyawan.IzinAddActivity">

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bt_back_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/white" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/oswald_bold"
        android:text="Izin Karyawan"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kotakgaji"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_light"
                    android:text="@string/tanggal"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_light"
                    android:text="@string/alasan"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_light"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="20dp" />





            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/edt_ijin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/kotakinputgaji"
                    android:fontFamily="@font/oswald_light"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_alasan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/kotakinputgaji"
                    android:fontFamily="@font/oswald_light"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <RadioGroup
                    android:id="@+id/radioGroup_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <RadioButton
                        android:id="@+id/radio_izin"
                        android:layout_width="wrap_content"
                        android:onClick="radioizin"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald_light"
                        android:text="Izin"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radio_sakit"
                        android:layout_width="wrap_content"
                        android:onClick="radioizin"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald_light"
                        android:text="Sakit"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radio_lain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald_light"
                        android:text="Lain - Lain"
                        android:onClick="radioizin"
                        android:textSize="16dp" />


                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_izin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/simpan"
            android:textAllCaps="false"
            app:backgroundTint="@color/hitampuyeh"

            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>